fix: remove most errors